# thesis

./: NewNewStation.rspag  README  README~
Sockets&Parsing/: CMakeLists.txt  CMakeLists.txt~  New_server.cpp  New_server.cpp~  Parsing_functions.cpp  Parsing_functions.cpp~  Parsing_functions.hpp  Parsing_functions.hpp~  Rapid_Parsing_functions.cpp  Rapid_Parsing_functions.cpp~  Rapid_Parsing_functions.hpp  Rapid_Parsing_functions.hpp~  client.cpp  rapid_code_freewriting.txt  rapid_code_networking.txt  rapidxml.hpp  rapidxml.hpp~  server.cpp~
Sockets&Parsing/rapidxml-1.13/: rapidxml.hpp  rapidxml.hpp~
server_client/: server.cpp
